# mysecret11

./: .directory  Note  build.gradle
app/: build.gradle  google-services.json  proguard-rules.pro
app/src/MySecreate/: AndroidManifest.xml  fragment_soccer_home.xml
app/src/MySecreate/java/com/: ConstantsFlavor.java
app/src/MySecreate/res/color/: c_vc_player_team_selected_text_color.xml  create_team_tab_counter_text_color_selector.xml  create_team_tab_img_tint_selector.xml  create_team_tab_selector.xml  dashboard_tab_text_color_selector.xml  selector_player_team_textcolor.xml
app/src/MySecreate/res/drawable/: bg_10_rounded_orange.xml  bg_accent_80radius.xml  bg_appblack.xml  bg_appblack_80radius.xml  bg_button_shadow_green_join.xml  bg_button_shadow_red.xml  bg_button_shadow_red_entry_fee.xml  bg_button_shadow_yellow.xml  bg_button_shadow_yellow_small.xml  bg_cofirm_win_signle_multi.xml  bg_fbblue_5radius.xml  bg_fbblue_5radius_left.xml  (+71 more)
app/src/MySecreate/res/drawable-xhdpi/: ll_left_round_corner_blue.xml
app/src/MySecreate/res/drawable-xxhdpi/: bg_btn_rounded_orange.xml  bg_rounded_white.xml
app/src/Vision/: AndroidManifest.xml
app/src/Vision/cpp/: main.cpp
app/src/dev/: AndroidManifest.xml
app/src/dev/cpp/: rest.cpp
app/src/imuons/: CMakeLists.txt
app/src/imuons/cpp/: main.cpp
app/src/imuons/debug/: google-services.json
app/src/imuons/java/com/: ConstantsFlavor.java
app/src/imuons/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
keystore/: keystore.properties  livekeystore.jks
(+939 files in other folders)
